# surrealDBLargeMessageExample

./: README.md  docker-compose.yml
example/: Cargo.toml
example/src/: main.rs
